# pdfplaceholder

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  analyze_at_sitead.py  analyze_char_positions.py  analyze_new_ornek.py  analyze_ornek_pdf.py  clean_system.py  create_test_multi_pattern.py  create_test_pdf.py  debug_detection.py  deep_analysis.py  fill_placeholders.py  main.py  new_function.py  new_text_tracker.py  pattern_analyzer.py  perfect_system.py  pyproject.toml  remove_emojis.py  render.yaml  requirements.txt  test_direct_optimization.py  test_enhanced_detection.py  test_font_size_controls.py  test_improved_positions.py  test_multiple_detection.py  test_multiple_positions.py  test_multiple_same_key.py  test_optimized_fix.py  test_overflow_feature.py
debug_sessions/: 75426db6-ed9c-4060-bae7-2011d0dc7e71_placeholders.json  7dcaeb6b-a7be-42bd-972f-da49b633982c_placeholders.json
public/: index.html
tests/: conftest.py  test_main.py
